--- a/css/home.css
+++ b/css/home.css
@@ -180,3 +180,82 @@ footer p {
     }
 }
 
+/* Styling Big Feature */
+.big-feature {
+    background-color: #f9f9f9;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+.channel-profile h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+/* Tag img untuk GIF */
+.local-gif {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+}
+
+/* Tombol Subscribe */
+.subscribe-btn {
+    background-color: #FF0000;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 25px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+.subscribe-btn:hover {
+    background-color: #cc0000;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+}
+
+/* Responsiveness */
+@media screen and (max-width: 768px) {
+    .local-gif {
+        width: 100%;
+        height: auto;
+    }
+    
+    .channel-profile h2 {
+        font-size: 20px;
+    }
+    
+    .subscribe-btn {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+}
+
+
+/* video terbaru */
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
